# django

Spotinext/: db.sqlite3  manage.py  pyproject.toml
Spotinext/Spotinext/: asgi.py  settings.py  urls.py  wsgi.py
