[tool.poetry]
name = "spotinext"
version = "0.1.0"
description = ""
authors = ["gokulakrishnan <Gokul1234>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
